--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -35,6 +35,11 @@
   filter: drop-shadow(0 0 1.5em #61dafbaa);
 }
 
+.nav {
+  display: flex;
+  align-items: center;
+}
+
 .nav-list {
   display: flex;
   list-style: none;
@@ -55,6 +60,15 @@
 
 .nav-item a:hover {
   color: #a75c00;
+}
+
+.main-menu {
+  margin-right: auto;
+}
+
+.login-menu {
+  margin-left: 2.5em;
+
 }
 
 @media (max-width: 768px) {
