--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -7,6 +7,7 @@
   top: 0;
   z-index: 1000;
   border-bottom: 1px solid rgba(128, 128, 128, 0.5);
+  position: absolute!important;
 }
 
 .header-container {
