Actualizo css para mejorar vista de botones

--- a/src/styles/ProductCard.css
+++ b/src/styles/ProductCard.css
@@ -49,10 +49,12 @@
   color: white;
   text-decoration: none;
   border-radius: 5px;
+  border-color: transparent;
   transition: background 0.3s ease;
 }
 
 .product-button:hover {
   background-color: #794e3b;
+  border-color: transparent;
   color: white;
 }
