--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -106,3 +106,18 @@
     margin: 0 0.5rem;
   }
 }
+
+.cart-icon {
+  position: relative;
+}
+
+.cart-count {
+  position: absolute;
+  top: -5px;
+  right: -10px;
+  background: red;
+  color: white;
+  font-size: 0.75rem;
+  border-radius: 50%;
+  padding: 1px 6px;
+}
